# examples

./: 1111_113506tkaiser2-34056s_tkaiser2.tgz  README.md  account.sh  client.c  cstrip.sh  dummy  hello  hello_slurm  index.html  makefile  parallel.f90  parallel.py  server  simple  works.tgz
affinity/: clr_dir  doit  domonitor  edit.py  htest.c  onnodes  pop_dir  st.in  works.ipynb  works.py  works2.py
apptainer/: 86.def  addpip.def  addpip86.def  addpy9.def  app.def  app2.def  app2b.def  app9.def  basic.def  basicj.def  bat9.def  cuda530.def  cuda550.def  cudaredo.def  do460_8.def  do530_8.def  do530_9.def  dobuild  gccs.def  gccs_sr.def  mpich.def  mpich_ch3.def  mpich_ch4.def  mpich_ch4b.def  n2.def  n2c.def  nopt.def  nvidia.def  oneapi.def  openmpi.def  openmpi5.def  openmpix.def  py11.def  py12.def  remote9.def  remote9b.def  rock86.def  rocky2c.def  rocky8.6.def  rocky8.def  (+10 more)
array/: array.job  doboth  doit  doseperate  dotogether  invertc.c  invertp.py  makefile  setarray.py  small  useboth  usedirs  uselist
assignments/: assignment1  assignment2  doint.c  doint.f90  index.html  input  makefile
avx/: MandelbrotImage.cpp  clock  makefile
batch/: helloc.c  hellof.f  hybrid.f90  index.html  info.f90  info.py  makefile  mymod.f90  pointer.f90  shortlist  sinkf.f90  sinkfile.c  sinput1
bot/: README  array  array2  array4  array_simple  c_array.c  dummy.c  dummy.py  f_array.f90  index.html  list  makefile  pars  readme.html  readme.txt  simple.py  spam.c  workerbee.f90  (+1 more)
hybrid/spack/: CMakeLists.txt  makefile  package.py  simple-1.0.tgz  simple.tgz
r/: big  (+76 more)
(+1732 files in other folders)
